<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView
        android:orientation="vertical"
        app:cardElevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:id="@+id/txt_trailers_label"
                android:text="@string/trailers"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/TxtDetailSessionMediumTitle"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <ProgressBar android:id="@+id/progress_bar"
                app:layout_constraintTop_toBottomOf="@id/txt_trailers_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView android:id="@+id/txt_no_trailers"
                android:visibility="gone"
                android:text="@string/no_trailers"
                app:layout_constraintTop_toBottomOf="@id/txt_trailers_label"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/TxtDetailSessionMediumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView android:id="@+id/recycler_trailers"
                app:layout_constraintTop_toBottomOf="@id/txt_trailers_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <Button android:id="@+id/button_see_all_trailers"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_trailers"
                style="@style/ButtonSeeAll"
                android:text="@string/see_all_trailers"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</layout>