...
                <fragment android:id="@+id/fragment_social"
                    android:layout_marginTop="5dp"
                    android:name="br.com.luisfelipeas5.givemedetails.view.fragments.details.SocialFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <fragment android:id="@+id/fragment_trailers_preview"
                    android:layout_marginTop="5dp"
                    android:name="br.com.luisfelipeas5.givemedetails.view.fragments.details.TrailersFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <fragment android:id="@+id/fragment_reviews_preview"
...

                <View android:layout_width="match_parent"
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:layout_height="?actionBarSize"/>

                <fragment android:id="@+id/fragment_trailers"
                    android:name="br.com.luisfelipeas5.givemedetails.view.fragments.details.TrailersFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <fragment android:id="@+id/fragment_reviews"
                    android:name="br.com.luisfelipeas5.givemedetails.view.fragments.details.ReviewsFragment"
...
